# py-exfer

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
exfer/: __init__.py  base_client.py  capabilities.py  exfer.py  lmstudio.py  model.py  ollama.py  provider.py
exfer/utils/: __init__.py  images.py  requests.py
